[package]
name = "jarvis-modbus-exporter"
version = "0.1.0"
authors = ["Jorrit Salverda <jorrit.salverda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modbus = "1.0"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
byteorder = "1"
conv = "0.3"
gcp-bigquery-client = "0.9"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
openssl = { version = "0.10", features = ["vendored"] }
kube = "0.52.0"
kube-runtime = "0.52.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }