[package]
name = "jarvis-modbus-exporter"
version = "0.1.0"
authors = ["Jorrit Salverda <jorrit.salverda@gmail.com>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
chrono = "0.4"
conv = "0.3"
modbus = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.5", features = ["macros"] }
uuid = { version = "0.8", features = ["v4"] }
jarvis-lib = { git = "https://github.com/JorritSalverda/jarvis-lib", tag = "0.1.15" }